add new website from server na

--- a/xem-phim-bo/dem-lang-man-o-hagwon/index.html
+++ b/xem-phim-bo/dem-lang-man-o-hagwon/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1713,40 +1713,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/transformers-chien-binh-cuoi-cung" title="Transformers: Chiến binh cuối cùng">
+          <a class="list-top-movie-link" href="/phim-moi/to-tung-phan-9" title="Tố tụng (Phần 9)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/transformers-chien-binh-cuoi-cung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-tung-phan-9-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Transformers: Chiến binh cuối cùng
+             Tố tụng (Phần 9)
             </span>
             <span class="list-top-movie-item-en">
-             Transformers: The Last Knight
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-mong-giua-ban-ngay" title="Tôi Mộng Giữa Ban Ngày">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-mong-giua-ban-ngay-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tôi Mộng Giữa Ban Ngày
-            </span>
-            <span class="list-top-movie-item-en">
-             You Are Desire
+             Suits (Season 9)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1757,18 +1735,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/buoi-hen-cua-carl" title="Buổi Hẹn Của Carl">
+          <a class="list-top-movie-link" href="/phim-moi/giai-ma-phan-1" title="Giải mã (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buoi-hen-cua-carl-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giai-ma-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Buổi Hẹn Của Carl
+             Giải mã (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Carl's Date
+             Explained (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1779,21 +1757,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tho-san-bong-dem-vu-khi-sinh-tu-phan-2" title="Thợ săn bóng đêm – Vũ khí sinh tử (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/dang-cap-thuong-luu" title="Đẳng Cấp Thượng Lưu">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tho-san-bong-dem-vu-khi-sinh-tu-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dang-cap-thuong-luu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thợ săn bóng đêm – Vũ khí sinh tử (Phần 2)
+             Đẳng Cấp Thượng Lưu
             </span>
             <span class="list-top-movie-item-en">
-             Shadowhunters: The Mortal Instruments (Season 2)
+             High Class
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1801,21 +1779,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dong-yi" title="Dong Yi">
+          <a class="list-top-movie-link" href="/phim-moi/truong-mcfarland-hoa-ky" title="Trường Mcfarland, Hoa Kỳ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dong-yi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truong-mcfarland-hoa-ky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dong Yi
+             Trường Mcfarland, Hoa Kỳ
             </span>
             <span class="list-top-movie-item-en">
-             Dong Yi
+             McFarland, USA
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-tan-cong" title="Cuộc Tấn Công">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-tan-cong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cuộc Tấn Công
+            </span>
+            <span class="list-top-movie-item-en">
+             The Assault
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
