add new website from server na

--- a/xem-phim-moi/thieu-nien-va-chim-diec/index.html
+++ b/xem-phim-moi/thieu-nien-va-chim-diec/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1783,40 +1783,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-ta-dep-tua-doa-hoa" title="Tình ta đẹp tựa đóa hoa">
+          <a class="list-top-movie-link" href="/phim-moi/show-cua-den" title="Show Của Đen">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-ta-dep-tua-doa-hoa-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/show-cua-den-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình ta đẹp tựa đóa hoa
+             Show Của Đen
             </span>
             <span class="list-top-movie-item-en">
-             We Made a Beautiful Bouquet
-            </span>
-            <span class="list-top-movie-item-view">
-             6 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/8-mile" title="8 Mile">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/8-mile-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             8 Mile
-            </span>
-            <span class="list-top-movie-item-en">
-             8 Mile
+             Show of Đen
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1827,40 +1805,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-ban-va-tinh-duc" title="Tinh Bạn Và Tình Dục">
+          <a class="list-top-movie-link" href="/phim-moi/gli-sfiorati" title="Gli sfiorati">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-ban-va-tinh-duc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gli-sfiorati-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tinh Bạn Và Tình Dục
+             Gli sfiorati
             </span>
             <span class="list-top-movie-item-en">
-             Tinh Bạn Và Tình Dục
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lau-dai-di-dong-cua-howl" title="Lâu Đài Di Động Của Howl">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lau-dai-di-dong-cua-howl-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lâu Đài Di Động Của Howl
-            </span>
-            <span class="list-top-movie-item-en">
-             Howl's Moving Castle
+             Gli sfiorati
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1871,21 +1827,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/kiem-vuong-trieu-chi-co-son-kiem-tang" title="Kiếm Vương Triều Chi Cô Sơn Kiếm Tàng">
+          <a class="list-top-movie-link" href="/phim-moi/me-ke-xinh-dep" title="Mẹ Kế Xinh Đẹp">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kiem-vuong-trieu-chi-co-son-kiem-tang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-ke-xinh-dep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kiếm Vương Triều Chi Cô Sơn Kiếm Tàng
+             Mẹ Kế Xinh Đẹp
             </span>
             <span class="list-top-movie-item-en">
-             Sword Dynasty Fantasy Masterwork
+             Stepmom
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/quai-thu-2" title="Quái thú">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quai-thu-2014-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Quái thú
+            </span>
+            <span class="list-top-movie-item-en">
+             Animal
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hoang-de-an-may" title="Hoàng Đế Ăn Mày">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoang-de-an-may-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hoàng Đế Ăn Mày
+            </span>
+            <span class="list-top-movie-item-en">
+             Hoàng Đế Ăn Mày
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
