add new website from server na

--- a/xem-phim-moi/hoa-giang-ho-bat-luong-soai/index.html
+++ b/xem-phim-moi/hoa-giang-ho-bat-luong-soai/index.html
@@ -1201,7 +1201,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1791,18 +1791,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sieu-nhien-phan-1" title="Siêu Nhiên (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/informa" title="Informa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-nhien-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/informa-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Siêu Nhiên (Phần 1)
+             Informa
             </span>
             <span class="list-top-movie-item-en">
-             Supernatural (Season 1)
+             Informa
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1813,18 +1813,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/diep-vien-khong-khong-thay-tai-xuat" title="Điệp viên không không thấy tái xuất">
+          <a class="list-top-movie-link" href="/phim-moi/gentlemen-prefer-nature-girls" title="Gentlemen Prefer Nature Girls">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/diep-vien-khong-khong-thay-tai-xuat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gentlemen-prefer-nature-girls-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Điệp viên không không thấy tái xuất
+             Gentlemen Prefer Nature Girls
             </span>
             <span class="list-top-movie-item-en">
-             Johnny English Reborn
+             Gentlemen Prefer Nature Girls
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vet-tich-tren-nui-phan-2" title="Vết Tích Trên Núi (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vet-tich-tren-nui-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vết Tích Trên Núi (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Signs (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1835,40 +1857,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truy-tim-bang-chung" title="Truy Tìm Bằng Chứng">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truy-tim-bang-chung-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Truy Tìm Bằng Chứng
-            </span>
-            <span class="list-top-movie-item-en">
-             Truy Tìm Bằng Chứng
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tay-dua-huyen-thoai" title="Tay Đua Huyền Thoại">
+          <a class="list-top-movie-link" href="/phim-moi/tung-con-song-vo" title="Từng Cơn Sóng Vỗ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tay-dua-huyen-thoai-2007-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tung-con-song-vo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tay Đua Huyền Thoại
+             Từng Cơn Sóng Vỗ
             </span>
             <span class="list-top-movie-item-en">
-             Ta Ra Rum Pum
+             My Mr.mermaid
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1879,18 +1879,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quyet-chien-tran-o-long" title="quyết chiến trận Ô long">
+          <a class="list-top-movie-link" href="/phim-moi/to-quoc-phan-6" title="Tổ quốc (Phần 6)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quyet-chien-tran-o-long-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-quoc-phan-6-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             quyết chiến trận Ô long
+             Tổ quốc (Phần 6)
             </span>
             <span class="list-top-movie-item-en">
-             Fight the Way out
+             Homeland (Season 6)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
